--- a/day 4.ipynb
+++ b/day 4.ipynb
@@ -38,9 +38,9 @@
    "source": [
     "###question 2\n",
     "range()\n",
-    "->It is a biult in function in python mainly used in for looping statements like 'for' and 'while' loop. This                    function used to create series of numbers within in given range .\n",
-    "->It has syntax range(start,stop,step).\n",
-    "->For example if the syntax read is range(a,b,c). Then 'a' is starting number of the series and 'b-1' is the                  stoping number and 'c' is increment between each elements. Here start and step are optional they are 0 and 1                   by default respectively. But stop is required, 'start','stop','step' are all integers."
+    "\\n->It is a biult in function in python mainly used in for looping statements like 'for' and 'while' loop. This                    function used to create series of numbers within in given range .\n",
+    "\\n->It has syntax range(start,stop,step).\n",
+    "\\n->For example if the syntax read is range(a,b,c). Then 'a' is starting number of the series and 'b-1' is the                  stoping number and 'c' is increment between each elements. Here start and step are optional they are 0 and 1                   by default respectively. But stop is required, 'start','stop','step' are all integers."
    ]
   },
   {
