--- a/day 11.ipynb
+++ b/day 11.ipynb
@@ -526,10 +526,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is low negative correlation. </br>\n",
-    "     H<sub>0</sub> = There is no significant difference between attrition and age.</br>\n",
-    "     H<sub>A</sub> = There is significant difference between attrition and age.</br>\n",
-    "     As p value less than .05 so null hypothesis is rejected .</br>\n",
+    "It is low negative correlation. \n",
+    "     H<sub>0</sub> = There is no significant difference between attrition and age.\n",
+    "     H<sub>A</sub> = There is significant difference between attrition and age.\n",
+    "     As p value less than .05 so null hypothesis is rejected .\n",
     "     so there is significant difference between attrition and age.\n",
     " \n",
     " "
@@ -593,10 +593,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is low negative correlation. </br>\n",
-    "     H<sub>0</sub> = There is no significant difference between attrition and years at company.</br>\n",
-    "     H<sub>A</sub> = There is significant difference between attrition and years at company.</br>\n",
-    "     As p value less than .05 so null hypothesis is rejected .</br>\n",
+    "It is low negative correlation. \n",
+    "     H<sub>0</sub> = There is no significant difference between attrition and years at company.\n",
+    "     H<sub>A</sub> = There is significant difference between attrition and years at company.\n",
+    "     As p value less than .05 so null hypothesis is rejected .\n",
     "     so there is significant difference between attrition and years at company.\n",
     " \n",
     " "
@@ -655,10 +655,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is low negative correlation. </br>\n",
-    "     H<sub>0</sub> = There is no significant difference between attrition and years since last promotion.</br>\n",
-    "     H<sub>A</sub> = There is significant difference between attrition and years since last promotion.</br>\n",
-    "     As p value less than .05 so null hypothesis is rejected .</br>\n",
+    "It is low negative correlation. \n",
+    "     H<sub>0</sub> = There is no significant difference between attrition and years since last promotion.\n",
+    "     H<sub>A</sub> = There is significant difference between attrition and years since last promotion.\n",
+    "     As p value less than .05 so null hypothesis is rejected .\n",
     "     so there is significant difference between attrition and years since last promotion.\n",
     " \n",
     " "
@@ -717,10 +717,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is low negative correlation. </br>\n",
-    "     H<sub>0</sub> = There is no significant difference between attrition and training times last year.</br>\n",
-    "     H<sub>A</sub> = There is significant difference between attrition and training times last year.</br>\n",
-    "     As p value less than .05 so null hypothesis is rejected .</br>\n",
+    "It is low negative correlation. \n",
+    "     H<sub>0</sub> = There is no significant difference between attrition and training times last year.\n",
+    "     H<sub>A</sub> = There is significant difference between attrition and training times last year.\n",
+    "     As p value less than .05 so null hypothesis is rejected .\n",
     "     so there is significant difference between attrition and training times last year .\n",
     " \n",
     " "
@@ -779,10 +779,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is low negative correlation. </br>\n",
-    "     H<sub>0</sub> = There is no significant difference between attrition and stock option level.</br>\n",
-    "     H<sub>A</sub> = There is significant difference between attrition and stock option level.</br>\n",
-    "     As p value more than .05 so null hypothesis is accepted .</br>\n",
+    "It is low negative correlation. \n",
+    "     H<sub>0</sub> = There is no significant difference between attrition and stock option level.\n",
+    "     H<sub>A</sub> = There is significant difference between attrition and stock option level.\n",
+    "     As p value more than .05 so null hypothesis is accepted .\n",
     "     so there  is no significant difference between attrition and stock option level.\n",
     " \n",
     " "
@@ -841,10 +841,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is low positive correlation. </br>\n",
-    "     H<sub>0</sub> = There is no significant difference between attrition and percent salary hike.</br>\n",
-    "     H<sub>A</sub> = There is significant difference between attrition and percent salary hike.</br>\n",
-    "     As p value less than .05 so null hypothesis is rejected .</br>\n",
+    "It is low positive correlation. \n",
+    "     H<sub>0</sub> = There is no significant difference between attrition and percent salary hike.\n",
+    "     H<sub>A</sub> = There is significant difference between attrition and percent salary hike.\n",
+    "     As p value less than .05 so null hypothesis is rejected .\n",
     "     so there there is significant difference between attrition and percent salary hike.\n",
     " \n",
     " "
@@ -903,10 +903,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is low negative correlation. </br>\n",
-    "     H<sub>0</sub> = There is no significant difference between attrition and job level.</br>\n",
-    "     H<sub>A</sub> = There is significant difference between attrition and job level.</br>\n",
-    "     As p value more than .05 so null hypothesis is accepted .</br>\n",
+    "It is low negative correlation. \n",
+    "     H<sub>0</sub> = There is no significant difference between attrition and job level.\n",
+    "     H<sub>A</sub> = There is significant difference between attrition and job level.\n",
+    "     As p value more than .05 so null hypothesis is accepted .\n",
     "     so there there is no significant difference between attrition and job level.\n",
     " \n",
     " "
@@ -965,10 +965,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is low negative correlation. </br>\n",
-    "     H<sub>0</sub> = There is no significant difference between attrition and distance from home.</br>\n",
-    "     H<sub>A</sub> = There is significant difference between attrition and distance from home.</br>\n",
-    "     As p value more than .05 so null hypothesis is accepted .</br>\n",
+    "It is low negative correlation. \n",
+    "     H<sub>0</sub> = There is no significant difference between attrition and distance from home.\n",
+    "     H<sub>A</sub> = There is significant difference between attrition and distance from home.\n",
+    "     As p value more than .05 so null hypothesis is accepted .\n",
     "     so there there is no significant difference between attrition and distance from home.\n",
     " \n",
     " "
@@ -1027,10 +1027,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is low negative correlation. </br>\n",
-    "     H<sub>0</sub> = There is no significant difference between attrition and education.</br>\n",
-    "     H<sub>A</sub> = There is significant difference between attrition and education.</br>\n",
-    "     As p value more than .05 so null hypothesis is accepted .</br>\n",
+    "It is low negative correlation. \n",
+    "     H<sub>0</sub> = There is no significant difference between attrition and education.\n",
+    "     H<sub>A</sub> = There is significant difference between attrition and education.\n",
+    "     As p value more than .05 so null hypothesis is accepted .\n",
     "     so there there is no significant difference between attrition and education.\n",
     " \n",
     " "
@@ -1089,10 +1089,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is low negative correlation. </br>\n",
-    "     H<sub>0</sub> = There is no significant difference between attrition and years with current manager.</br>\n",
-    "     H<sub>A</sub> = There is significant difference between attrition and years with current manager.</br>\n",
-    "     As p value less than .05 so null hypothesis is rejected .</br>\n",
+    "It is low negative correlation. \n",
+    "     H<sub>0</sub> = There is no significant difference between attrition and years with current manager.\n",
+    "     H<sub>A</sub> = There is significant difference between attrition and years with current manager.\n",
+    "     As p value less than .05 so null hypothesis is rejected .\n",
     "     so there there is significant difference between attrition and years with current manager.\n",
     " \n",
     " "
