--- a/day 15.ipynb
+++ b/day 15.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Create a 3x3x3 array with random values"
+    "## 1. Create a 3x3x3 array with random values"
    ]
   },
   {
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Create a 5x5 matrix with values 1,2,3,4 just below the diagonal\n"
+    "## 2.Create a 5x5 matrix with values 1,2,3,4 just below the diagonal\n"
    ]
   },
   {
@@ -71,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Create a 8x8 matrix and fill it with a checkerboard pattern"
+    "## 3.Create a 8x8 matrix and fill it with a checkerboard pattern"
    ]
   },
   {
@@ -109,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Normalize a 5x5 random matrix"
+    "## 4.Normalize a 5x5 random matrix"
    ]
   },
   {
@@ -151,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. How to find common values between two arrays?"
+    "## 5.How to find common values between two arrays?"
    ]
   },
   {
@@ -184,7 +184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. How to get the dates of yesterday, today and tomorrow?"
+    "## 6.How to get the dates of yesterday, today and tomorrow?"
    ]
   },
   {
@@ -216,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7. Consider two random array A and B, check if they are equal\n"
+    "## 7.Consider two random array A and B, check if they are equal\n"
    ]
   },
   {
@@ -254,7 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "8. Create random vector of size 10 and replace the maximum value by 0\n"
+    "## 8.Create random vector of size 10 and replace the maximum value by 0\n"
    ]
   },
   {
@@ -289,7 +289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "9. How to print all the values of an array?"
+    "## 9.How to print all the values of an array?"
    ]
   },
   {
@@ -325,7 +325,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "10. Subtract the mean of each row of a matrix"
+    "## 10.Subtract the mean of each row of a matrix"
    ]
   },
   {
@@ -363,7 +363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "11. Consider a given vector, how to add 1 to each element indexed by a second vector (be careful with repeated indices)?"
+    "## 11.Consider a given vector, how to add 1 to each element indexed by a second vector (be careful with repeated indices)?"
    ]
   },
   {
@@ -391,7 +391,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "12. How to get the diagonal of a dot product?"
+    "## 12.How to get the diagonal of a dot product?"
    ]
   },
   {
@@ -443,7 +443,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "13. How to find the most frequent value in an array?"
+    "## 13.How to find the most frequent value in an array?"
    ]
   },
   {
@@ -475,7 +475,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "14. How to get the n largest values of an array"
+    "## 14.How to get the n largest values of an array"
    ]
   },
   {
@@ -506,7 +506,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "15. How to create a record array from a regular array?"
+    "## 15.How to create a record array from a regular array?"
    ]
   },
   {
