--- a/day 21 logistic regression .ipynb
+++ b/day 21 logistic regression .ipynb
@@ -1413,19 +1413,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Inference:\n",
     "\n",
     "Most significant features:\n",
-    "->Age\n",
-    "->Marital Status\n",
-    "->NumCompaniesWorked\n",
-    "->TotalWorkingYears\n",
-    "->TrainingTimesLastYear\n",
+    "->Age </br>\n",
+    "->Marital Status</br>\n",
+    "->NumCompaniesWorked</br>\n",
+    "->TotalWorkingYears</br>\n",
+    "->TrainingTimesLastYear</br>\n",
     "->YearsSinceLastPromotion\n",
     "->YearsWithCurrManager\n",
     "\n",
