--- a/day 21 logistic regression .ipynb
+++ b/day 21 logistic regression .ipynb
@@ -395,12 +395,13 @@
     "Inference \n",
     "\n",
     "Most significant features\n",
-    "->Income \n",
-    "->Family\n",
-    "->Education\n",
-    "->CD Account\n",
-    "->Online\n",
-    "->CreditCard\n",
+    "\n",
+    "<li>->Income </li>\n",
+    "<li>->Family </li>\n",
+    "<li>->Education</li>\n",
+    "<li>->CD Account</li>\n",
+    "<li>->Online</li>\n",
+    "<li>->CreditCard</li>\n",
     "\n",
     "\n",
     "Significant features\n",
@@ -1424,12 +1425,12 @@
     "->NumCompaniesWorked</br>\n",
     "->TotalWorkingYears</br>\n",
     "->TrainingTimesLastYear</br>\n",
-    "->YearsSinceLastPromotion\n",
-    "->YearsWithCurrManager\n",
+    "->YearsSinceLastPromotion</br>\n",
+    "->YearsWithCurrManager</br>\n",
     "\n",
-    "Significant features:\n",
-    "->Department\n",
-    "->EducationField\n",
+    "Significant features:</br>\n",
+    "->Department</br>\n",
+    "->EducationField</br>\n",
     "->JobRole"
    ]
   }
