--- a/day 21 logistic regression .ipynb
+++ b/day 21 logistic regression .ipynb
@@ -392,21 +392,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Inference \n",
+    "<h3>Inference </h3>\n",
     "\n",
     "Most significant features\n",
     "\n",
-    "<li>->Income </li>\n",
-    "<li>->Family </li>\n",
-    "<li>->Education</li>\n",
-    "<li>->CD Account</li>\n",
-    "<li>->Online</li>\n",
-    "<li>->CreditCard</li>\n",
+    "<li>Income </li>\n",
+    "<li>Family </li>\n",
+    "<li>Education</li>\n",
+    "<li>CD Account</li>\n",
+    "<li>Online</li>\n",
+    "<li>CreditCard</li>\n",
     "\n",
     "\n",
     "Significant features\n",
-    "->CCAvg\n",
-    "->Securities Account\n",
+    "<li>CCAvg</li>\n",
+    "<li>Securities Account</li>\n",
     "    \n",
     "   \n"
    ]
