--- a/day 21 logistic regression .ipynb
+++ b/day 21 logistic regression .ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Logistic Regression For Bank Personal Loan Modelling :"
+    "## Logistic  Regression  For  Bank  Personal  Loan   Modelling  :"
    ]
   },
   {
@@ -392,9 +392,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Inference </h3>\n",
+    "<h2>Inference </h2>\n",
     "\n",
-    "Most significant features\n",
+    "<h2>Most significant features<h2>\n",
     "\n",
     "<li>Income </li>\n",
     "<li>Family </li>\n",
@@ -404,7 +404,7 @@
     "<li>CreditCard</li>\n",
     "\n",
     "\n",
-    "Significant features\n",
+    "<h2>Significant features<h2>\n",
     "<li>CCAvg</li>\n",
     "<li>Securities Account</li>\n",
     "    \n",
@@ -1417,21 +1417,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Inference:\n",
+    "<h3>Inference:<h3>\n",
     "\n",
-    "Most significant features:\n",
-    "->Age </br>\n",
-    "->Marital Status</br>\n",
-    "->NumCompaniesWorked</br>\n",
-    "->TotalWorkingYears</br>\n",
-    "->TrainingTimesLastYear</br>\n",
-    "->YearsSinceLastPromotion</br>\n",
-    "->YearsWithCurrManager</br>\n",
+    "<h2>Most significant features:<h2>\n",
+    "<li>Age </li>\n",
+    "<li>Marital Status</li>\n",
+    "<li>NumCompaniesWorked</li>\n",
+    "<li>TotalWorkingYears</li>\n",
+    "<li>TrainingTimesLastYear</li>\n",
+    "<li>YearsSinceLastPromotion</li>\n",
+    "<li>YearsWithCurrManager</li>\n",
     "\n",
-    "Significant features:</br>\n",
-    "->Department</br>\n",
-    "->EducationField</br>\n",
-    "->JobRole"
+    "<h2>Significant features:</h2>\n",
+    "<li>Department</li>\n",
+    "<li>EducationField</li>\n",
+    "<li>JobRole</li>"
    ]
   }
  ],
